# amr_ws

./: .gitignore  .gitmodules  CLAUDE.md  PANDUAN_DEPLOY.md  README.md  amr.gv  cyclonedds.xml  frames_2026-05-16_19.06.04.gv
maps/: lab_mapping_5.pgm  lab_mapping_5.yaml  lantai1.pgm  lantai1.yaml
scripts/: fix_lidar_usb.sh  install_microros.sh  preflight_check.sh  setup_udev.sh  sync_firmware_to_nuc.sh  sync_to_nuc.sh
src/amr_bringup/: CMakeLists.txt  package.xml
src/amr_bringup/launch/: bringup.launch.py  bringup_minimal.launch.py  save_map.launch.py
src/amr_description/: CMakeLists.txt  package.xml
src/amr_description/config/: ekf.yaml  front_lidar.yaml  mapper_params.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_minimal.yaml  rear_lidar.yaml  view_robot.rviz
src/amr_description/launch/: amr_slam.launch.py  gazebo.launch.py  view_model.launch.py
src/amr_description/maps/: peta_gudang_awal.pgm  peta_gudang_awal.yaml  peta_ruangan_baru.pgm  peta_ruangan_baru.yaml  peta_willow.pgm  peta_willow.yaml
src/amr_description/meshes/: caster_fr_link.stl  caster_rl_link.stl  caster_rr_link.stl  left_wheel_link.stl  lidar1_link.stl  lidar2_link.stl  right_wheel_link.stl  rocker_left_link.stl  rocker_right_link.stl
src/amr_description/rviz/: amr_config.rviz  (+1 more)
src/amr_hardware/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/amr_mission/: package.xml  setup.cfg  setup.py
src/amr_mission/amr_mission/: mission_executor_node.py  station_recorder_node.py
src/amr_mission/config/: stations.yaml
src/amr_mission/launch/: mission.launch.py
src/amr_msgs/: CMakeLists.txt  package.xml
src/amr_navigation/: CMakeLists.txt  package.xml
src/amr_odom/: package.xml  setup.cfg  setup.py
src/imu_serial/: package.xml  setup.py
(+27 files in other folders)
