<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_mission</name>
  <version>0.0.1</version>
  <description>Mission executor: terima daftar stasiun, kirim goal ke Nav2 satu per satu</description>
  <maintainer email="zulfan.andria@gmail.com">zulfan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>amr_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
